[gd_scene load_steps=8 format=3 uid="uid://lsu858yvaswd"]

[ext_resource type="Texture2D" uid="uid://rtyseghcw68e" path="res://assets/images/game/game/background.jpg" id="1_3fgmx"]
[ext_resource type="PackedScene" uid="uid://dj1137ma426k8" path="res://logic/ui/game_input.tscn" id="1_4rtpd"]
[ext_resource type="Script" path="res://logic/ui/map_editor.gd" id="1_j3yxc"]
[ext_resource type="TileSet" uid="uid://b6taw5w4s7s5i" path="res://assets/resources/game/tiles.tres" id="2_44dmf"]
[ext_resource type="PackedScene" uid="uid://hds34errxgf3" path="res://logic/ui/map_editor_ui.tscn" id="5_63t8i"]
[ext_resource type="Script" path="res://logic/game/maps/map.gd" id="5_b0ipg"]

[sub_resource type="GDScript" id="GDScript_ofqvf"]
script/source = "extends Control

@onready var map_editor: MapEditor = $MapEditor
@onready var map_editor_ui: MapEditorUI = $CanvasLayer/MapEditorUI

var _global: GlobalGlobal = Global


func _ready() -> void:
	_global.loaded_map = $Map
	

func _on_map_editor_ui_load_selected(file_path: String) -> void:
	var json_map: String = MapFile.load_from_file(file_path)
	var new_map: Map = MapFile.deserialize(json_map)
	var old_map: Map = map_editor.map
	remove_child(old_map)
	add_child(new_map)
	map_editor.map = new_map
	map_editor_ui.map = new_map
	_global.loaded_map = new_map
	old_map.queue_free()
	map_editor_ui.reload_map_data()
	map_editor.create_tile_map_by_map(new_map)
"

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = SubResource("GDScript_ofqvf")

[node name="CanvasLayerBackground" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="CanvasLayerBackground"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_3fgmx")
expand_mode = 5
stretch_mode = 6

[node name="GameInput" parent="." instance=ExtResource("1_4rtpd")]
position = Vector2(496, 496)
zoom = Vector2(1, 1)

[node name="Map" type="Node2D" parent="."]
script = ExtResource("5_b0ipg")

[node name="MapEditor" type="Node2D" parent="." node_paths=PackedStringArray("game_input", "map")]
script = ExtResource("1_j3yxc")
game_input = NodePath("../GameInput")
map = NodePath("../Map")

[node name="TileMapLayer" type="TileMapLayer" parent="MapEditor"]
visible = false
use_parent_material = true
tile_set = ExtResource("2_44dmf")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MapEditorUI" parent="CanvasLayer" node_paths=PackedStringArray("game_input", "map", "map_editor") instance=ExtResource("5_63t8i")]
tile_set = ExtResource("2_44dmf")
game_input = NodePath("../../GameInput")
map = NodePath("../../Map")
map_editor = NodePath("../../MapEditor")

[connection signal="input_dragged" from="GameInput" to="MapEditor" method="_on_game_input_dragged"]
[connection signal="input_escape_triggered" from="GameInput" to="CanvasLayer/MapEditorUI" method="_on_game_input_input_escape"]
[connection signal="edit_selected" from="CanvasLayer/MapEditorUI" to="MapEditor" method="_on_map_editor_ui_edit_selected"]
[connection signal="load_selected" from="CanvasLayer/MapEditorUI" to="." method="_on_map_editor_ui_load_selected"]
[connection signal="map_resized" from="CanvasLayer/MapEditorUI" to="MapEditor" method="_on_ui_map_resized"]
[connection signal="map_settings_player_id_changed" from="CanvasLayer/MapEditorUI" to="MapEditor" method="_on_map_editor_ui_map_settings_player_id_changed"]
[connection signal="remove_selected" from="CanvasLayer/MapEditorUI" to="MapEditor" method="_on_map_editor_ui_remove_selected"]
[connection signal="save_selected" from="CanvasLayer/MapEditorUI" to="MapEditor" method="_on_map_editor_ui_save_selected"]
[connection signal="terrain_selected" from="CanvasLayer/MapEditorUI" to="MapEditor" method="_on_ui_terrain_selected"]
[connection signal="tile_selected" from="CanvasLayer/MapEditorUI" to="MapEditor" method="_on_ui_tile_selected"]
[connection signal="unit_selected" from="CanvasLayer/MapEditorUI" to="MapEditor" method="_on_ui_unit_selected"]
